--- a/src/app/screens/belonging-page/belonging-page.component.html
+++ b/src/app/screens/belonging-page/belonging-page.component.html
@@ -1,10 +1,9 @@
 <div class="body">
     <div class="table-container">
-        <p>List of Belongings</p>
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Name</th>
+                    <th scope="col">Belongings</th>
                 </tr>
             </thead>
             <tbody>
