--- a/src/app/screens/friend-page/friend-page.component.html
+++ b/src/app/screens/friend-page/friend-page.component.html
@@ -3,7 +3,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Name</th>
+                <th scope="col">Freinds' Name</th>
             </tr>
         </thead>
         <tbody>
